--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,12 @@
 requires = ["setuptools>=67.0"]
 build-backend = "setuptools.build_meta"
 [project]
-name = "package-name"
+name = "logicus"
 version = "0.0.1"
 authors = [
     {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
 ]
-description = "Package description"
+description = "λογικός"
 readme = "README.md"
 requires-python = ">=3.10"
 classifiers=[
@@ -16,7 +16,7 @@ classifiers=[
         "Operating System :: OS Independent",
 ]
 
-keywords = ["package-name"]
+keywords = ["logicus"]
 
 dependencies = [
     "PyGithub >= 2.6.0",
@@ -25,8 +25,8 @@ dependencies = [
 ]
 
 [project.scripts]
-package-name = "package_name.cli:run"
+logicus = "logicus.cli:run"
 
 [project.urls]
-"Homepage" = "https://github.com/org_name/package_name"
-"Bug Tracker" = "https://github.com/org_name/package_name/issues"
+"Homepage" = "https://github.com/alxfed/logicus"
+"Bug Tracker" = "https://github.com/alxfed/logicus/issues"
